Подредактировал файлы добавив единую точку входа в программу и единую точку редактирования программы (в конфиге)

--- a/Style.ipynb
+++ b/Style.ipynb
@@ -382,7 +382,7 @@
     "        x=self.initial_conv(x)  \n",
     "        out=self.initial_ada1(self.leaky(self.initial_noise1(x)),w)\n",
     "        if steps==0:\n",
-    "            return initial_rgb()\n",
+    "            return self.initial_rgb(x)\n",
     "        for step in range(steps):\n",
     "            upscaled=F.interpolate(out,scale_factor=2,mode='bilinear')\n",
     "            out=self.prog_blocks[step](upscaled,w)\n",
@@ -473,7 +473,7 @@
     "\n",
     "        if steps==0:\n",
     "            out=self.minibatch_std(x)\n",
-    "            return final_block(out).view(out.shape[0],-1)\n",
+    "            return self.final_block(out).view(out.shape[0],-1)\n",
     "            \n",
     "        downscaled=self.leaky(self.rgb_layers[cur_step+1](self.avg_pool(x)))      \n",
     "        out=self.avg_pool(self.prog_blocks[cur_step](out))\n",
