--- a/Style.ipynb
+++ b/Style.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "8f534823-49e4-4edb-88c6-81463a7c46b4",
    "metadata": {},
    "outputs": [],
@@ -587,17 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "ab7e5a22-df71-4dfa-ae42-b3c953a015b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "741"
+       "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
